<resources>
    <string name="app_name" translatable="false">ExploringGreece</string>
    <string name="favorites">FAVORITES</string>
    <string name="hint_password">Password (123456)</string>
    <string name="log_in">Log in</string>
    <string name="username">Username (admin@gmail.com)</string>
    <string name="attraction_editor">ATTRACTION EDITOR</string>
    <string name="hint_image_url">Image URL</string>
    <string name="hint_longitude">Longitude</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_info_in_greek">Info in Greek...</string>
    <string name="hint_info_in_english">Info in English...</string>
    <string name="hint_info_in_german">Info in German...</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="title">Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_attraction">Add Attraction</string>
    <string name="attractions">ATTRACTIONS</string>
    <string name="santorini">SANTORINI</string>
    <string name="enter">Enter</string>
    <string name="toast_voice_command_not_found">Voice Command not recognised.</string>
    <string name="toast_no_gps_permission">No GPS permission given</string>
    <string name="vc_back">Go back to previous screen.</string>
    <string name="vc_exit">Exit the Application.</string>
    <string name="vc_help">Show voice commands.</string>
    <string name="vc_logout">Log out of the admin dashboard.</string>
    <string name="vc_add">Go to \'Add New Attraction\' screen.</string>
    <string name="vc_favorutes">Go to Favorites screen.</string>
    <string name="vc_login">Log in to the admin dashboard.</string>
    <string name="vc_email">Edit email.</string>
    <string name="vc_password">Edit password.</string>
    <string name="vc_cancel">Go to previous screen.</string>
    <string name="vc_save">Create new attraction.</string>
    <string name="vc_favorite">Add attraction to favorites.</string>
    <string name="vc_speak">Read attraction info.</string>
    <string name="toast_no_voice_commands">There are no voice commands.</string>
    <string name="voice_commands">Voice Commands</string>
    <string name="toast_cannot_add">Can not add selected</string>
    <string name="toast_favorite_added">Favorite added!</string>
    <string name="toast_save_failed">Save failed. Please check your input and try again!</string>
    <string name="toast_login_success">Logged in successfully.</string>
    <string name="toast_login_failed">Log in failed.</string>
    <string name="toast_check_credentials">Please check your credentials and try again.</string>
    <string name="toast_cant_access_data">Can\'t access data</string>
    <string name="toast_no_favorites">You have no favorites!</string>
    <string name="toast_location_permission_denied">Location Permission Denied</string>
    <string name="view_favorite">View</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="toast_data_loaded">Data loaded</string>
    <string name="toast_attraction_saved_success">Attraction saved successfully!</string>
    <string name="toast_favorite_not_found1">"Favorite with title  "</string>
    <string name="toast_favorite_not_found2">" is missing."</string>
    <string name="log_out">Log out</string>
    <string name="admin_login">Admin Login</string>
</resources>