<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointOfInterestCreationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/admin_add_attraction_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#68317793"
            android:fontFamily="@font/autour_one"
            android:text="@string/attraction_editor"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editText_ImageURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_image_url"
                    android:inputType="textPersonName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_Longitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:digits="0123456789."
                        android:ems="10"
                        android:hint="@string/hint_longitude"
                        android:inputType="number|numberDecimal" />

                    <EditText
                        android:id="@+id/editText_Latitude"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_latitude"
                        android:inputType="number|numberDecimal" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editText_info_gr"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_info_in_greek"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/editText_info_en"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_info_in_english"
                    android:inputType="textMultiLine" />

                <EditText
                    android:id="@+id/editText_info_de"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/hint_info_in_german"
                    android:inputType="textMultiLine" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="0.1" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7E1CA67A"
                    android:onClick="onSaveClick"
                    android:text="@string/save"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7E1CA67A"
                    android:onClick="onCancelClick"
                    android:text="@string/cancel"
                    android:textSize="24sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>