<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#68317793"
            android:fontFamily="@font/autour_one"
            android:text="@string/dashboard"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <LinearLayout
                android:id="@+id/attractionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_weight="1"
                        tools:srcCompat="@tools:sample/avatars" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="9"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title"
                            android:textSize="24sp" />

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25sp"
                            android:layout_marginRight="25sp"
                            android:layout_weight="1"
                            android:backgroundTint="#7E1CA67A"
                            android:text="@string/edit" />

                        <Button
                            android:id="@+id/button6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25sp"
                            android:layout_marginRight="25sp"
                            android:layout_weight="1"
                            android:backgroundTint="#7E1CA67A"
                            android:text="@string/delete" />

                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7E1CA67A"
            android:onClick="onAddNewClick"
            android:text="@string/add_attraction" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>